moved to correct folder

--- a/module2-regression-2/Ben_Pettis_LS_DS14_212_assignment.ipynb
+++ b/module2-regression-2/Ben_Pettis_LS_DS14_212_assignment.ipynb
@@ -173,17 +173,17 @@
       "metadata": {
         "id": "tzjpvW1dAEMC",
         "colab_type": "code",
+        "outputId": "36f70e18-8075-4b87-a36b-3bf9da3cc3fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 776
-        },
-        "outputId": "ef3ba8b0-268a-4bf2-f57c-03f19fb5500e"
+        }
       },
       "source": [
         "# check to see if any values in 'created' are before april\n",
         "df.sort_values(by='created')"
       ],
-      "execution_count": 291,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -676,7 +676,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 291
+          "execution_count": 4
         }
       ]
     },
@@ -747,16 +747,16 @@
       "metadata": {
         "id": "32xDJ1qpI45E",
         "colab_type": "code",
+        "outputId": "32c5c0da-d900-4e98-d6c9-f303066fc6de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        },
-        "outputId": "6d33af78-020d-461d-bba1-f8a9263042b3"
+        }
       },
       "source": [
         "train.head()"
       ],
-      "execution_count": 296,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,7 +1032,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 296
+          "execution_count": 9
         }
       ]
     },
@@ -1041,11 +1041,11 @@
       "metadata": {
         "id": "9gSDeE9ZJb_F",
         "colab_type": "code",
+        "outputId": "03b0e3e5-4e14-4ede-d35d-e8419520926a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
-        },
-        "outputId": "e80f563b-3611-4980-9aa1-9ce01d155a0e"
+        }
       },
       "source": [
         "# linear regression with multiple features\n",
@@ -1061,7 +1061,7 @@
         "y_test = test[target]\n",
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 297,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1073,7 +1073,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 297
+          "execution_count": 10
         }
       ]
     },
@@ -1082,11 +1082,11 @@
       "metadata": {
         "id": "BtcuI88mPKCu",
         "colab_type": "code",
+        "outputId": "03bf6792-bacb-4294-90b5-7c8fcab778ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 100
-        },
-        "outputId": "ecaeacde-9225-413d-a852-25062d7841c0"
+        }
       },
       "source": [
         "# get model coef and intercept\n",
@@ -1094,7 +1094,7 @@
         "coefficients = pd.Series(model.coef_, features)\n",
         "print(coefficients.to_string())"
       ],
-      "execution_count": 298,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,11 +1114,11 @@
       "metadata": {
         "id": "YHtbZKvNPXSX",
         "colab_type": "code",
+        "outputId": "d5102579-149a-4f2f-ac5a-ad3e2814cb4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "283240ff-62db-46b2-cd74-6ef4b1a391a3"
+        }
       },
       "source": [
         "# get mae\n",
@@ -1130,7 +1130,7 @@
         "mae = mean_absolute_error(y_test, y_pred_test)\n",
         "print(f'Test MAE: {mae:.2f}')\n"
       ],
-      "execution_count": 299,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,11 +1147,11 @@
       "metadata": {
         "id": "CHt8PLRBeBJS",
         "colab_type": "code",
+        "outputId": "da80bcb0-b991-4740-bcb7-e609de6aa125",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "edaf2f5c-4f35-4114-9396-2b52ad0cd0cd"
+        }
       },
       "source": [
         "# get rmse\n",
@@ -1162,7 +1162,7 @@
         "rmse = np.sqrt(mse)\n",
         "print(f'Test RMSE: {rmse:.2f}')"
       ],
-      "execution_count": 300,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1179,11 +1179,11 @@
       "metadata": {
         "id": "x0LQUVDheQOl",
         "colab_type": "code",
+        "outputId": "82634784-2b24-455e-b8a5-0d5f4c4e330a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "41dc945f-a961-407f-fb57-905aa269b867"
+        }
       },
       "source": [
         "# get r^2 value\n",
@@ -1192,7 +1192,7 @@
         "r2 = r2_score(y_test, y_pred_test)\n",
         "print(f'Test R^2: {r2:.5f}')"
       ],
-      "execution_count": 301,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1207,90 +1207,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GLc7CCTJfuCU",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 535
-        },
-        "outputId": "fa5532c5-2f0d-4e94-9546-1e2dbb3329ca"
-      },
-      "source": [
-        "# try to get lower MAE \n",
-        "# checking all features for lowest MAE\n",
-        "cols = list(df._get_numeric_data())\n",
-        "for col in cols:\n",
-        "  model = LinearRegression()\n",
-        "  X_train = train[[col]]\n",
-        "  X_test = test[[col]]\n",
-        "  target = 'price'\n",
-        "  y_train = train[target]\n",
-        "  y_test = test[target]\n",
-        "  model.fit(X_train, y_train)\n",
-        "  y_pred_test = model.predict(X_test)\n",
-        "  mae = mean_absolute_error(y_test, y_pred_test)\n",
-        "  print(f'{col} test MAE: {mae:.2f}')\n"
-      ],
-      "execution_count": 309,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "bathrooms test MAE: 890.46\n",
-            "bedrooms test MAE: 988.73\n",
-            "latitude test MAE: 1195.62\n",
-            "longitude test MAE: 1138.53\n",
-            "price test MAE: 0.00\n",
-            "elevator test MAE: 1163.71\n",
-            "cats_allowed test MAE: 1194.60\n",
-            "hardwood_floors test MAE: 1195.37\n",
-            "dogs_allowed test MAE: 1194.04\n",
-            "doorman test MAE: 1143.44\n",
-            "dishwasher test MAE: 1169.04\n",
-            "no_fee test MAE: 1189.65\n",
-            "laundry_in_building test MAE: 1198.31\n",
-            "fitness_center test MAE: 1163.70\n",
-            "pre-war test MAE: 1196.74\n",
-            "laundry_in_unit test MAE: 1165.43\n",
-            "roof_deck test MAE: 1188.83\n",
-            "outdoor_space test MAE: 1179.89\n",
-            "dining_room test MAE: 1162.07\n",
-            "high_speed_internet test MAE: 1191.62\n",
-            "balcony test MAE: 1182.06\n",
-            "swimming_pool test MAE: 1188.18\n",
-            "new_construction test MAE: 1197.21\n",
-            "terrace test MAE: 1182.90\n",
-            "exclusive test MAE: 1197.43\n",
-            "loft test MAE: 1197.71\n",
-            "garden_patio test MAE: 1189.08\n",
-            "wheelchair_access test MAE: 1195.58\n",
-            "common_outdoor_space test MAE: 1197.32\n",
-            "catdog_allowed test MAE: 1194.03\n",
-            "perkiness test MAE: 1126.85\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sUThCKjd9ObK",
+        "id": "TuggG7jpKoA_",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
         },
-        "outputId": "e1e30361-3d23-4886-c5a7-a4073d762354"
+        "outputId": "b146e0d6-0a1f-4786-dcf8-38995d5459b2"
       },
       "source": [
+        "# try to get better MAE by using new features\n",
         "\n",
-        "# linear regression with multiple features\n",
+        "cols = list(df._get_numeric_data())\n",
+        "cols.remove('price')\n",
         "from sklearn.linear_model import LinearRegression\n",
         "# instantiate class\n",
         "model = LinearRegression()\n",
         "# select x features and fit model\n",
-        "features = ['bedrooms', 'bathrooms', 'longitude', 'doorman', 'catdog_allowed', 'perkiness','dishwasher']\n",
+        "features = cols\n",
         "X_train = train[features]\n",
         "X_test = test[features]\n",
         "target = 'price'\n",
@@ -1298,7 +1232,7 @@
         "y_test = test[target]\n",
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 312,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1310,20 +1244,20 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 312
+          "execution_count": 15
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iaQRmC1R-Slu",
+        "id": "v9eVBZETSXGU",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "9e7819e9-a734-42ac-b356-74fdd9795236"
+        "outputId": "814f4aba-f359-485b-d9cf-daba4f37d146"
       },
       "source": [
         "# predict new values & get MAE with new features\n",
@@ -1334,13 +1268,13 @@
         "mae = mean_absolute_error(y_test, y_pred_test)\n",
         "print(f'Test MAE: {mae:.2f}')"
       ],
-      "execution_count": 313,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train MAE: 706.57\n",
-            "Test MAE: 712.80\n"
+            "Train MAE: 692.76\n",
+            "Test MAE: 701.31\n"
           ],
           "name": "stdout"
         }
