--- a/module3-ridge-regression/Assignment_Ridge_Regression.ipynb
+++ b/module3-ridge-regression/Assignment_Ridge_Regression.ipynb
@@ -205,13 +205,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 462
         },
-        "outputId": "58eb9402-209e-4482-e4ba-5de840baf091"
+        "outputId": "3eafaa34-6de0-4fca-de16-2a939337675a"
       },
       "source": [
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 261,
+      "execution_count": 315,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,7 +404,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 261
+          "execution_count": 315
         }
       ]
     },
@@ -417,7 +417,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 343
         },
-        "outputId": "b9f58c60-c12b-46d9-fca4-a29f40e113fb"
+        "outputId": "701653af-8a34-4648-a3dd-c5d968944ebf"
       },
       "source": [
         "# Creating a subset of the data based on the Building Class and Sale Price Parameters\n",
@@ -429,7 +429,7 @@
         "print(df_subset.shape)\n",
         "df_subset.head()"
       ],
-      "execution_count": 262,
+      "execution_count": 316,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,7 +622,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 262
+          "execution_count": 316
         }
       ]
     },
@@ -635,13 +635,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8f36d8d2-f9f8-4206-e28d-144482d257ff"
+        "outputId": "409fad99-869f-4316-c844-28d4057be558"
       },
       "source": [
         "# Checking the oldest date\n",
         "df_subset['SALE_DATE'].min()"
       ],
-      "execution_count": 263,
+      "execution_count": 317,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,7 +653,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 263
+          "execution_count": 317
         }
       ]
     },
@@ -666,7 +666,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "f11a17ea-c151-4cc8-a3cd-d8d4a4f18f50"
+        "outputId": "db75a990-e5a3-40bb-d3dd-148072ba57cb"
       },
       "source": [
         "# Creating the Training and Testing Datasets\n",
@@ -685,7 +685,7 @@
         "X_test = test[features]\n",
         "y_test = test[target]"
       ],
-      "execution_count": 264,
+      "execution_count": 318,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +709,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 258
         },
-        "outputId": "a1541a74-77a1-40c7-e7de-71d300980a10"
+        "outputId": "7b179d00-6833-407b-d928-7affbf718f48"
       },
       "source": [
         "# One Hot Encoding import of Categorical Features\n",
@@ -730,7 +730,7 @@
         "print(X_train.shape)\n",
         "X_train.head()"
       ],
-      "execution_count": 265,
+      "execution_count": 319,
       "outputs": [
         {
           "output_type": "stream",
@@ -1067,7 +1067,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 265
+          "execution_count": 319
         }
       ]
     },
@@ -1080,12 +1080,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 799
         },
-        "outputId": "1083cd9f-b68a-4da6-e4a7-e2c2a5a129f7"
+        "outputId": "252a6bac-6548-4f4b-907b-3b331c571bba"
       },
       "source": [
         "X_train.dtypes"
       ],
-      "execution_count": 266,
+      "execution_count": 320,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,7 +1142,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 266
+          "execution_count": 320
         }
       ]
     },
@@ -1155,12 +1155,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 334
         },
-        "outputId": "3ce0d64c-d96b-4ecf-c1d3-b53557cad312"
+        "outputId": "7127cfb4-72df-4138-d902-c92d2776bc24"
       },
       "source": [
         "X_train.describe()"
       ],
-      "execution_count": 267,
+      "execution_count": 321,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1637,7 +1637,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 267
+          "execution_count": 321
         }
       ]
     },
@@ -1650,7 +1650,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "e476f851-ce19-4d31-cc48-fec5e91fa874"
+        "outputId": "38de20e4-c867-4fb3-e744-8c7e4af9b22a"
       },
       "source": [
         "from sklearn.feature_selection import f_regression, SelectKBest\n",
@@ -1663,11 +1663,9 @@
         "\n",
         "# Shape of new DF\n",
         "print(X_train_selected.shape)\n",
-        "print(X_test_selected.shape)\n",
-        "\n",
-        "warnings.filterwarnings(action = 'ignore')"
+        "print(X_test_selected.shape)"
       ],
-      "execution_count": 268,
+      "execution_count": 322,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,7 +1686,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 850
         },
-        "outputId": "670e6197-778f-46b1-fcc5-c2ab3ccfd561"
+        "outputId": "25bdcdbf-0432-4691-acce-a024a7870eea"
       },
       "source": [
         "# Which features were selected?\n",
@@ -1707,7 +1705,7 @@
         "for name in unselected_names:\n",
         "  print(name)"
       ],
-      "execution_count": 269,
+      "execution_count": 323,
       "outputs": [
         {
           "output_type": "stream",
@@ -1775,7 +1773,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 272
         },
-        "outputId": "8b815439-8c31-40f9-cf8e-8cb1133e0b46"
+        "outputId": "60299f35-020b-45f8-82c0-c8f72afc640d"
       },
       "source": [
         "# Ridge Regression -- TRAINING DATA\n",
@@ -1785,11 +1783,11 @@
         "  \n",
         "  # Fit Ridge Regression model\n",
         "  model = Ridge(alpha = alpha, normalize = True)\n",
-        "  model.fit(X_train, y_train)\n",
-        "  y_pred = model.predict(X_train)\n",
+        "  model.fit(X_train_selected, y_train)\n",
+        "  y_pred_train = model.predict(X_train_selected)\n",
         "  \n",
         "  # Get Test MAE\n",
-        "  mae = mean_absolute_error(y_train, y_pred)\n",
+        "  mae = mean_absolute_error(y_train, y_pred_train)\n",
         "  print((f'Train MAE: ${mae:,.0f} \\n'))\n",
         "\n",
         "\n",
@@ -1798,25 +1796,25 @@
         "for alpha in alphas:\n",
         "    ridge_regression(alpha = alpha)"
       ],
-      "execution_count": 270,
+      "execution_count": 329,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "0.01 Alpha\n",
-            "Train MAE: $162,582 \n",
+            "Train MAE: $167,763 \n",
             "\n",
             "0.1 Alpha\n",
-            "Train MAE: $162,591 \n",
+            "Train MAE: $167,777 \n",
             "\n",
             "1.0 Alpha\n",
-            "Train MAE: $173,865 \n",
+            "Train MAE: $177,535 \n",
             "\n",
             "10.0 Alpha\n",
-            "Train MAE: $204,073 \n",
+            "Train MAE: $205,532 \n",
             "\n",
             "100.0 Alpha\n",
-            "Train MAE: $214,890 \n",
+            "Train MAE: $215,148 \n",
             "\n"
           ],
           "name": "stdout"
@@ -1832,7 +1830,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "75cb4d3d-725e-4d3d-ef83-b96886802d44"
+        "outputId": "110397d2-28e2-410d-e348-629488c78c23"
       },
       "source": [
         "# Ridge CV -- TRAINING DATA\n",
@@ -1842,10 +1840,10 @@
         "alphas = [0.01, 0.1, 1.0, 10.0, 100.0]\n",
         "\n",
         "ridge = RidgeCV(alphas = alphas, normalize = True)\n",
-        "ridge.fit(X_train, y_train)\n",
+        "ridge.fit(X_train_selected, y_train)\n",
         "ridge.alpha_"
       ],
-      "execution_count": 271,
+      "execution_count": 330,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1857,7 +1855,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 271
+          "execution_count": 330
         }
       ]
     },
@@ -1870,7 +1868,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 272
         },
-        "outputId": "b5789255-a18b-43d0-9ed2-2d4c519aae34"
+        "outputId": "78e5834d-f483-41e1-a11a-d094f367cf09"
       },
       "source": [
         "# Ridge Regression -- TESTING DATA\n",
@@ -1880,12 +1878,12 @@
         "\n",
         "  # Fit Ridge Regression Model\n",
         "  model = Ridge(alpha = alpha, normalize = True)\n",
-        "  model.fit(X_train, y_train)\n",
-        "  y_pred = model.predict(X_test)\n",
+        "  model.fit(X_train_selected, y_train)\n",
+        "  y_pred = model.predict(X_test_selected)\n",
         "\n",
         "  # Get Test MAE\n",
         "  mae = mean_absolute_error(y_test, y_pred)\n",
-        "  print((f'Train MAE: ${mae:,.0f} \\n'))\n",
+        "  print((f'Test MAE: ${mae:,.0f} \\n'))\n",
         "\n",
         "\n",
         "alphas = [0.01, 0.1, 1.0, 10.0, 100.0]\n",
@@ -1893,25 +1891,25 @@
         "for alpha in alphas:\n",
         "    ridge_regression(alpha = alpha)"
       ],
-      "execution_count": 272,
+      "execution_count": 331,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "0.01 Alpha\n",
-            "Train MAE: $171,010 \n",
+            "Test MAE: $172,584 \n",
             "\n",
             "0.1 Alpha\n",
-            "Train MAE: $170,477 \n",
+            "Test MAE: $172,408 \n",
             "\n",
             "1.0 Alpha\n",
-            "Train MAE: $178,311 \n",
+            "Test MAE: $180,508 \n",
             "\n",
             "10.0 Alpha\n",
-            "Train MAE: $203,396 \n",
+            "Test MAE: $204,789 \n",
             "\n",
             "100.0 Alpha\n",
-            "Train MAE: $212,836 \n",
+            "Test MAE: $213,113 \n",
             "\n"
           ],
           "name": "stdout"
@@ -1927,7 +1925,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "daa75858-bec7-4eb3-ccc8-3f73b4382591"
+        "outputId": "d8a9c237-7898-4600-f03a-97ac6b2f1c11"
       },
       "source": [
         "# Ridge CV -- TESTING DATA\n",
@@ -1937,10 +1935,10 @@
         "alphas = [0.01, 0.1, 1.0, 10.0, 100.0]\n",
         "\n",
         "ridge = RidgeCV(alphas = alphas, normalize = True)\n",
-        "ridge.fit(X_test, y_test)\n",
+        "ridge.fit(X_test_selected, y_test)\n",
         "ridge.alpha_"
       ],
-      "execution_count": 274,
+      "execution_count": 334,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1952,7 +1950,72 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 274
+          "execution_count": 334
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9rHtVYGx_MvH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "d234b3a2-3911-4030-85cb-f67c12fe6241"
+      },
+      "source": [
+        "def ridge_regression(alpha):\n",
+        "  print(f'{alpha} Alpha')\n",
+        "\n",
+        "  # Fit Ridge Regression Model \n",
+        "  model = Ridge(alpha = alpha, normalize = True)\n",
+        "  model.fit(X_train_selected, y_train)\n",
+        "\n",
+        "  # Predicting Price\n",
+        "  y_pred_train = model.predict(X_train_selected)\n",
+        "  y_pred_test = model.predict(X_test_selected)\n",
+        "\n",
+        "  # Get Test MAE\n",
+        "  mae = mean_absolute_error(y_train, y_pred_train)\n",
+        "  mae1 = mean_absolute_error(y_test, y_pred_test)\n",
+        "  print((f'Train MAE: ${mae:,.0f}'))\n",
+        "  print((f'Test MAE: ${mae1:,.0f} \\n'))\n",
+        "\n",
+        "\n",
+        "alphas = [0.01, 0.1, 1.0, 10.0, 100.0]\n",
+        "\n",
+        "for alpha in alphas:\n",
+        "    ridge_regression(alpha = alpha)"
+      ],
+      "execution_count": 335,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.01 Alpha\n",
+            "Train MAE: $167,763\n",
+            "Test MAE: $172,584 \n",
+            "\n",
+            "0.1 Alpha\n",
+            "Train MAE: $167,777\n",
+            "Test MAE: $172,408 \n",
+            "\n",
+            "1.0 Alpha\n",
+            "Train MAE: $177,535\n",
+            "Test MAE: $180,508 \n",
+            "\n",
+            "10.0 Alpha\n",
+            "Train MAE: $205,532\n",
+            "Test MAE: $204,789 \n",
+            "\n",
+            "100.0 Alpha\n",
+            "Train MAE: $215,148\n",
+            "Test MAE: $213,113 \n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
