--- a/module3-ridge-regression/213_assig_LS_DS.ipynb
+++ b/module3-ridge-regression/213_assig_LS_DS.ipynb
@@ -1993,12 +1993,292 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Gn4zzEVGG9y9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a_list = [0.001, 0.01, 0.1, 1.0, 10, 100.0, 1000.0]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f2eAZ3d2JJKE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.linear_model import Ridge\n",
+        "from IPython.display import display, HTML\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "r52YJRKrE6Uw",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "def ridge_regression(alpha_list, X_train, X_test, y_train, y_test):\n",
+        "  from sklearn.linear_model import Ridge\n",
+        "  from IPython.display import display, HTML\n",
+        "  from sklearn.metrics import mean_absolute_error\n",
+        "  import matplotlib.pyplot as plt\n",
+        "  for alpha in alpha_list:\n",
+        "        \n",
+        "        # Fit Ridge Regression model\n",
+        "        display(HTML(f'Ridge Regression, with alpha={alpha}'))\n",
+        "        model = Ridge(alpha=alpha, normalize=True)\n",
+        "        model.fit(X_train, y_train)\n",
+        "        y_pred = model.predict(X_test)\n",
+        "\n",
+        "        # Get Test MAE\n",
+        "        mae = mean_absolute_error(y_test, y_pred)\n",
+        "        display(HTML(f'Test Mean Absolute Error: ${mae:,.0f}'))\n",
+        "        \n",
+        "        # Plot coefficients\n",
+        "        # coefficients = pd.Series(model.coef_, X_train.columns)\n",
+        "        # plt.figure(figsize=(16,8))\n",
+        "        # coefficients.sort_values().plot.barh(color='grey')\n",
+        "        # plt.xlim(-400,700)\n",
+        "        # plt.show()\n",
+        "        # plt.pause(.000001)\n",
+        "  return"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wlTLWlcOHThP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "2db78172-8a5c-4068-8194-7440d446e1a6"
+      },
+      "source": [
+        "ridge_regression(a_list, X_train, X_test, y_train, y_test)"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Ridge Regression, with alpha=0.001"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Test Mean Absolute Error: $158,360"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Ridge Regression, with alpha=0.01"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Test Mean Absolute Error: $157,919"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Ridge Regression, with alpha=0.1"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Test Mean Absolute Error: $157,540"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Ridge Regression, with alpha=1.0"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Test Mean Absolute Error: $172,238"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Ridge Regression, with alpha=10"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Test Mean Absolute Error: $201,018"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Ridge Regression, with alpha=100.0"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Test Mean Absolute Error: $210,197"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Ridge Regression, with alpha=1000.0"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Test Mean Absolute Error: $211,424"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dilEHe8bJGDW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Looks like an alpha around 0.1 will minimize test error!"
       ],
       "execution_count": 0,
       "outputs": []
