--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -780,31 +780,55 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 289
         },
-        "outputId": "e819512b-7cdf-4404-96f8-51c6796308b4"
+        "outputId": "6038b0b1-07dd-4af2-e689-9da73e09f78b"
       },
       "source": [
         "train = df[df.Date < '2017-01-01 00:00:00']\n",
-        "val  = df[df.Date >= '2017-01-01 00:00:00'] \n",
-        "val = df[df.Date < '2018-01-01 00:00:00']\n",
+        "val  = df[df.Date > '2017-01-01 00:00:00'] \n",
+        "val = val[val.Date < '2018-01-01 00:00:00']\n",
         "test = df[df.Date >= '2018-01-01 00:00:00']\n",
         "\n",
-        "train.shape, val.shape, test.shape\n"
+        "train.shape, val.shape, test.shape\n",
+        "print(\"train should be 2016 and earlier\")\n",
+        "print(train['Date'].min())\n",
+        "print(train['Date'].max())\n",
+        "print(train.shape)\n",
+        "print(\"\\n\")\n",
+        "print(\"val should be 2017\")\n",
+        "print(val['Date'].min())\n",
+        "print(val['Date'].max())\n",
+        "print(val.shape)\n",
+        "print(\"\\n\")\n",
+        "print(\"test should be 2018 and later\")\n",
+        "print(test['Date'].min())\n",
+        "print(test['Date'].max())\n",
+        "print(test.shape)"
       ],
-      "execution_count": 52,
+      "execution_count": 86,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((298, 59), (383, 59), (38, 59))"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 52
+          "output_type": "stream",
+          "text": [
+            "train should be 2016 and earlier\n",
+            "2011-05-16 00:00:00\n",
+            "2016-12-15 00:00:00\n",
+            "(298, 59)\n",
+            "\n",
+            "\n",
+            "val should be 2017\n",
+            "2017-01-04 00:00:00\n",
+            "2017-12-29 00:00:00\n",
+            "(85, 59)\n",
+            "\n",
+            "\n",
+            "test should be 2018 and later\n",
+            "2018-01-02 00:00:00\n",
+            "2026-04-25 00:00:00\n",
+            "(38, 59)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -827,7 +851,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "540a82bf-0eaf-4f6d-ff4d-d0596755b463"
+        "outputId": "2c7dbc86-233b-4ff8-e27a-5e2833117342"
       },
       "source": [
         "print(\"Train % Great\", train['Great'].mean())\n",
@@ -836,13 +860,13 @@
         "#I think it's going to be a problem that test is so much higher\n",
         "#Than train and validate..."
       ],
-      "execution_count": 53,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train % Great 0.40939597315436244\n",
-            "Val % Great 0.4177545691906005\n",
+            "Val % Great 0.4470588235294118\n",
             "Test % Great 0.5789473684210527\n"
           ],
           "name": "stdout"
@@ -896,14 +920,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 292
         },
-        "outputId": "a6a9a81f-b56a-4f7a-b230-f495c640131c"
+        "outputId": "25760a15-9e2a-43b8-96e3-cb48f9691fc9"
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
         "log_reg = LogisticRegression(solver='lbfgs')\n",
         "log_reg.fit(X_train, y_train)"
       ],
-      "execution_count": 55,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,7 +959,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 80
         }
       ]
     },
@@ -958,17 +982,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1f7dbe09-09ae-47c5-a003-8473a32aca64"
+        "outputId": "1317e811-16c9-40da-960d-8bef1321576f"
       },
       "source": [
         "print('Validation Accuracy', log_reg.score(X_val, y_val))"
       ],
-      "execution_count": 56,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Validation Accuracy 0.8642297650130548\n"
+            "Validation Accuracy 0.8117647058823529\n"
           ],
           "name": "stdout"
         }
@@ -993,19 +1017,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "65a1b4d5-548a-44af-d601-0bd4ceeb0acb"
+        "outputId": "739ea7a2-be40-4712-c928-9d8a0b40d008"
       },
       "source": [
-        "print('Validation Accuracy', log_reg.score(X_test, y_test))\n",
+        "print('Test Accuracy', log_reg.score(X_test, y_test))\n",
         "#Welp, that's not great. But I thought it would be lower becuase the test\n",
         "#baseline was so different than the others."
       ],
-      "execution_count": 65,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Validation Accuracy 0.7894736842105263\n"
+            "Test Accuracy 0.7894736842105263\n"
           ],
           "name": "stdout"
         }
@@ -1048,13 +1072,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 292
         },
-        "outputId": "a4e028e3-8930-4cb4-c644-17d51f47b7bc"
+        "outputId": "dc19b90d-e0c8-4abd-e305-63d8608b8e5c"
       },
       "source": [
         "log_reg = LogisticRegression(solver='lbfgs')\n",
         "log_reg.fit(X_train_encoded, y_train)"
       ],
-      "execution_count": 63,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -1086,7 +1110,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 63
+          "execution_count": 83
         }
       ]
     },
@@ -1099,18 +1123,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6e9b2d45-02c1-4278-9b98-a372c1a2aae6"
+        "outputId": "18493c78-7d10-4ba4-f9d5-7c25948565b6"
       },
       "source": [
         "print('Validation Accuracy', log_reg.score(X_val, y_val))\n",
         "#It actually doesn't seem to have changed my accuracy to hot encode"
       ],
-      "execution_count": 64,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Validation Accuracy 0.8642297650130548\n"
+            "Validation Accuracy 0.8117647058823529\n"
           ],
           "name": "stdout"
         }
